Fix Height Not Correctly Being Calculated on Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
 .app {
   background-color: var(--color-tone-7);
   -ms-flex-positive: 1;
-  height: 100vh;
+  height: 100dvh;
   position: relative;
   display: -ms-flexbox;
   display: flex;
